--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,22 @@
-.container{
-background-color: gray;
- height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-body{
-  height: 100vh;
-  background-color:  rgba(244, 91, 105, 1);
+
+.chartCard {
+  width: 100vw;
+  height: calc(100vh - 40px);
+  background: rgba(255, 167, 26, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.chartBox {
+  width: 700px;
+  padding: 20px;
+  border-radius: 20px;
+  border: solid 3px rgba(255, 26, 104, 1);
+  background: white;
 }
